force-app/main/default/objects/Trail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the trail&#39;s condition.</description>
    <inlineHelpText>Description of the trail&#39;s condition.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>