force-app/main/default/objects/Trail__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Date of last inspection.</description>
    <inlineHelpText>Date of last inspection.</inlineHelpText>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>